Bug 362952 - "Specific Color Selector" docker becomes wider when "Show Colorspace Selector" is checked
Summary: "Specific Color Selector" docker becomes wider when "Show Colorspace Selector...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 3.0 Beta
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: investigated, triaged
: 386117 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-11 19:14 UTC by mvowada
Modified: 2018-11-13 10:12 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video example (Krita RC1) (123 bytes, text/plain)
2016-05-18 13:36 UTC, mvowada
Details
Video example. (193.65 KB, video/mp4)
2016-05-18 13:40 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2016-05-11 19:14:24 UTC
(This happens with Krita 3.0 Beta 1 on Ubuntu Unity 14.04).
Maybe it's expected: the "Specific Color Selector" docker becomes wider if one checks "Show Colorspace Selector".

Reproducible: Always

Steps to Reproduce:
1. (Menu) > "Settings" > "Dockers" > "Specific Color Selector"
2. Check its checkbox "Show Colorspace Selector"

Actual Results:  
The docker becomes wider.

Expected Results:  
The docker width should remain the same?
Comment 1 Scott Petrovic 2016-05-11 20:30:32 UTC
for condensing the UI a bit, maybe we can remove the Color Space Browser button from this docker. That might be a bit too much for what the purpose of this docker is. 

That should condense it up
Comment 2 Halla Rempt 2016-05-14 10:44:23 UTC
Yes, you can just make the button invisible, or replace the text with ...
Comment 3 Scott Petrovic 2016-05-16 22:09:34 UTC
Git commit e6a8ad774795fc0f911b85b8f160e8d6814e2c9c by Scott Petrovic.
Committed on 16/05/2016 at 22:08.
Pushed by scottpetrovic into branch 'master'.

replacing the text with "..." resulted in a wider docker, so I just removed it for now.

Signed-off-by: Scott Petrovic <scottpetrovic@gmail.com>

M  +4    -0    libs/ui/widgets/kis_color_space_selector.cc
M  +1    -0    libs/ui/widgets/kis_color_space_selector.h
M  +2    -0    plugins/dockers/specificcolorselector/kis_specific_color_selector_widget.cc

http://commits.kde.org/krita/e6a8ad774795fc0f911b85b8f160e8d6814e2c9c
Comment 4 mvowada 2016-05-18 13:36:54 UTC
Created attachment 99050 [details]
Video example (Krita RC1)
Comment 5 mvowada 2016-05-18 13:39:11 UTC
Hi and thanks. Maybe it's expected, it seems the docker still becomes wider in Krita version 3.0 RC1. Ubuntu Unity 14.04 (video in attachment here above).
Comment 6 mvowada 2016-05-18 13:40:55 UTC
Created attachment 99051 [details]
Video example.

Sorry, here is the video example.
Comment 7 Scott Petrovic 2016-05-18 15:03:53 UTC
This is specific to linux then. Someone on that OS will have to take a look at it and see why it is expanding. Probably something with a minimum width
Comment 8 Scott Petrovic 2018-01-15 14:41:50 UTC
*** Bug 386117 has been marked as a duplicate of this bug. ***
Comment 9 Scott Petrovic 2018-01-15 14:43:58 UTC
in terms of the solution, maybe we can find out a bit more on how and why people are using this section. 

When do you need to change the color selector model. 

For example if you are working in 8-bit, why would you want to select in 16-bit?
Comment 10 Halla Rempt 2018-01-15 14:59:52 UTC
As discussed on irc, we cannot just not show the channel depth and profile selectors. A colorspace is intrinsically the combination of model, depth and profile. If one of those is missing, we don't have a colorspace and cannot select it. The only way to "fix" this issue is by moving the colorspace selector to a popup accessible from a button in the docker.
Comment 11 Andrew Crouthamel 2018-09-15 15:54:23 UTC
I can confirm this in 4.2.0 git master. From my investigation into this, I'd like to recommend moving the "Depth:" text and selection box to be under "Model:". That would probably eliminate or minimize this issue. It's certainly a minimum-width issue with those two elements side-by-side.

Application Version: 4.2.0
KDE Plasma Version: 5.13.5
KDE Frameworks Version: 5.50.0
Qt Version: 5.11.1
Comment 12 Anna Medonosova 2018-11-11 16:17:51 UTC
Git commit f702304f3cb0933055f24740c80ad7475172038a by Anna Medonosova.
Committed on 11/11/2018 at 16:17.
Pushed by amedonosova into branch 'master'.

Condense UI of the Specific color selector

Summary:
This diff moves selection of color space into a popup, as suggested in
bug 362952. It also changes the 'Use percentage' checkbox to a toggle
button, to further condense the controls.

The layout is now in a designer form.

Adds new SVG icons for 'ratio'.

Reviewers: #krita, rempt

Reviewed By: #krita, rempt

Subscribers: rempt, scottpetrovic

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16724

A  +1522 -0    krita/pics/svg/dark_ratio.svg
A  +1522 -0    krita/pics/svg/light_ratio.svg
M  +2    -0    krita/pics/svg/svg-icons.qrc
M  +19   -0    libs/widgets/kis_color_input.cpp
M  +3    -1    libs/widgets/kis_color_input.h
M  +2    -0    libs/widgets/kis_double_parse_spin_box.cpp
M  +2    -0    libs/widgets/kis_int_parse_spin_box.cpp
M  +6    -0    plugins/dockers/specificcolorselector/CMakeLists.txt
M  +39   -26   plugins/dockers/specificcolorselector/kis_specific_color_selector_widget.cc
M  +10   -3    plugins/dockers/specificcolorselector/kis_specific_color_selector_widget.h
A  +116  -0    plugins/dockers/specificcolorselector/wdgSpecificColorSelectorWidget.ui

https://commits.kde.org/krita/f702304f3cb0933055f24740c80ad7475172038a
Comment 13 mvowada 2018-11-13 10:12:54 UTC
Hi. 
I've just checked the new UI, it works very well for me. 
I like the "%" toggle button solution and the pop-up fixed the bug. 
Thanks