Condense UI of the Specific color selector

Summary:
This diff moves selection of color space into a popup, as suggested in
bug 362952. It also changes the 'Use percentage' checkbox to a toggle
button, to further condense the controls.

The layout is now in a designer form.

Adds new SVG icons for 'ratio'.

BUG: 362952

Reviewers: #krita, rempt

Reviewed By: #krita, rempt

Subscribers: rempt, scottpetrovic

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16724